// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`almost eligible pending violation > requirements almost met 1`] = `
[
  {
    "text": "Violation pending since Jan 1, 2023",
    "tooltip": undefined,
  },
]
`;

exports[`almost eligible pending violation > requirements met 1`] = `
[
  {
    "text": "Served 1/2 of probation term",
    "tooltip": undefined,
  },
  {
    "text": "Currently on eligible supervision level: medium",
    "tooltip": undefined,
  },
  {
    "text": "No restitution owed",
    "tooltip": "In compliance with Department Policy (ACC) 9.6, Restitution and Fees, 
under no circumstances may a Probation Officer make a motion for or agree to early 
termination of probation if the probationer has not paid the total amount of restitution owed.",
  },
  {
    "text": "No new convictions in the past 6 months",
    "tooltip": "In addition, whenever a person on probation is convicted of a new crime 
during the period of probation, the probation is not revoked, and the person
is sentenced to an unsuspended term of imprisonment which is concurrent with the
period of probation and the term of imprisonment will not expire until the
period of probation is completed, the Probation Officer may file a motion
with the court for early termination of probation.",
  },
]
`;

exports[`almost eligible restitution owed > requirements almost met 1`] = `
[
  {
    "text": "Remaining restitution balance $500.00",
    "tooltip": "In compliance with Department Policy (ACC) 9.6, Restitution and Fees, 
under no circumstances may a Probation Officer make a motion for or agree to early 
termination of probation if the probationer has not paid the total amount of restitution owed.",
  },
]
`;

exports[`almost eligible restitution owed > requirements met 1`] = `
[
  {
    "text": "Served 1/2 of probation term",
    "tooltip": undefined,
  },
  {
    "text": "Currently on eligible supervision level: medium",
    "tooltip": undefined,
  },
  {
    "text": "No new convictions in the past 6 months",
    "tooltip": "In addition, whenever a person on probation is convicted of a new crime 
during the period of probation, the probation is not revoked, and the person
is sentenced to an unsuspended term of imprisonment which is concurrent with the
period of probation and the term of imprisonment will not expire until the
period of probation is completed, the Probation Officer may file a motion
with the court for early termination of probation.",
  },
  {
    "text": "No pending violations",
    "tooltip": undefined,
  },
]
`;

exports[`fully eligible > requirements met 1`] = `
[
  {
    "text": "Served 1/2 of probation term",
    "tooltip": undefined,
  },
  {
    "text": "Currently on eligible supervision level: medium",
    "tooltip": undefined,
  },
  {
    "text": "Paid all owed restitution",
    "tooltip": "In compliance with Department Policy (ACC) 9.6, Restitution and Fees, 
under no circumstances may a Probation Officer make a motion for or agree to early 
termination of probation if the probationer has not paid the total amount of restitution owed.",
  },
  {
    "text": "No new convictions in the past 6 months",
    "tooltip": "In addition, whenever a person on probation is convicted of a new crime 
during the period of probation, the probation is not revoked, and the person
is sentenced to an unsuspended term of imprisonment which is concurrent with the
period of probation and the term of imprisonment will not expire until the
period of probation is completed, the Probation Officer may file a motion
with the court for early termination of probation.",
  },
  {
    "text": "No pending violations",
    "tooltip": undefined,
  },
]
`;
